--- a/thyme-wizard-application/src/main/resources/application.properties
+++ b/thyme-wizard-application/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=9999
+spring.thymeleaf.template-resolver-order=0
+spring.messages.basename=i18n/messages
 #server.ssl.key-store=classpath:secure.p12
 #server.ssl.key-store-password=password
 #server.ssl.key-password=password
@@ -6,5 +8,4 @@ server.compression.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript
 server.compression.min-response-size=2048
 spring.web.resources.chain.strategy.content.enabled=true
-spring.web.resources.chain.strategy.content.paths=/**
-spring.thymeleaf.template-resolver-order=0
+spring.web.resources.chain.strategy.content.paths=/**   
