--- a/thyme-wizard-application/pom.xml
+++ b/thyme-wizard-application/pom.xml
@@ -14,16 +14,30 @@
 	<name>thyme-wizard-application</name>
 	<description>thyme wizard application</description>
 	<properties>
+		<flyway.user>thymewizard</flyway.user>
+		<flyway.password>thymewizard</flyway.password>
+
+		<javafaker.version>1.0.2</javafaker.version>
+
 		<java.version>17</java.version>
 		<frontend-maven-plugin.version>1.12.0</frontend-maven-plugin.version>
 		<frontend-maven-plugin.nodeVersion>v16.3.0</frontend-maven-plugin.nodeVersion>
 		<frontend-maven-plugin.npmVersion>7.15.1</frontend-maven-plugin.npmVersion>
 	</properties>
 	<dependencies>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.github.wimdeblauwe</groupId>
+			<artifactId>jpearl-core</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -40,7 +54,6 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -64,6 +77,29 @@
 		<dependency>
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-mysql</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>${javafaker.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>31.0.1-jre</version>
 		</dependency>
 	</dependencies>
 
@@ -113,6 +149,33 @@
 						</execution>
 					</executions>
 				</plugin>
+				<plugin>
+					<groupId>io.github.wimdeblauwe</groupId>
+					<artifactId>jpearl-maven-plugin</artifactId>
+					<version>1.1.0</version>
+					<configuration>
+						<basePackage>com.arnaud.thymewizard.thymewizardapplication</basePackage>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>com.fizzed</groupId>
+					<artifactId>fizzed-watcher-maven-plugin</artifactId>
+					<version>1.0.6</version>
+					<configuration>
+						<watches>
+							<watch>
+								<directory>src/main</directory>
+								<exclude>*.css</exclude>
+								<exclude>*.js</exclude>
+								<exclude>*.svg</exclude>
+							</watch>
+						</watches>
+						<goals>
+							<goal>compile</goal>
+							<goal>process-classes</goal>
+						</goals>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -125,22 +188,12 @@
 				<artifactId>frontend-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>com.fizzed</groupId>
-				<artifactId>fizzed-watcher-maven-plugin</artifactId>
-				<version>1.0.6</version>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
 				<configuration>
-					<watches>
-						<watch>
-							<directory>src/main</directory>
-							<exclude>*.css</exclude>
-							<exclude>*.js</exclude>
-							<exclude>*.svg</exclude>
-						</watch>
-					</watches>
-					<goals>
-						<goal>compile</goal>
-						<goal>process-classes</goal>
-					</goals>
+					<url>jdbc:mysql://localhost/thymewizarddbtest</url>
+					<user>thymewizard</user>
+					<password>thymewizard</password>
 				</configuration>
 			</plugin>
 		</plugins>
