Switch database from mysql to postgresql

--- a/thyme-wizard-application/src/main/resources/application.properties
+++ b/thyme-wizard-application/src/main/resources/application.properties
@@ -3,16 +3,27 @@ spring.thymeleaf.template-resolver-order=0
 spring.messages.basename=i18n/messages
 spring.web.resources.chain.strategy.content.enabled=true
 spring.web.resources.chain.strategy.content.paths=/**
+
+# ------------------ Config database
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/thymewizarddbtest
-spring.datasource.username=thymewizard
-spring.datasource.password=thymewizard
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.datasource.url=jdbc:mysql://localhost/thymewizarddbtest
+#spring.datasource.username=thymewizard
+#spring.datasource.password=thymewizard
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=validate
+
+spring.datasource.url=jdbc:postgresql://localhost/tamingthymeleafdb
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.properties.hibernate.show_sql=false
 server.compression.enabled=true
+
 #spring.profiles.active=init-db
+
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript
 server.compression.min-response-size=2048
 spring.data.web.pageable.default-page-size=10
