--- a/thyme-wizard-application/src/main/resources/application-local.properties
+++ b/thyme-wizard-application/src/main/resources/application-local.properties
@@ -1,8 +1,15 @@
 spring.thymeleaf.cache=false
 # Database setup
-spring.datasource.url=jdbc:mysql://localhost/thymewizarddbtest
+#spring.datasource.url=jdbc:mysql://localhost/thymewizarddbtest
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=thymewizard
-spring.datasource.password=thymewizard
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.datasource.username=thymewizard
+#spring.datasource.password=thymewizard
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=validate
+
+spring.datasource.url=jdbc:postgresql://localhost/tamingthymeleafdb
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
