--- a/thyme-wizard-application/src/test/resources/application-data-jpa-test.properties
+++ b/thyme-wizard-application/src/test/resources/application-data-jpa-test.properties
@@ -1,10 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost/thymewizarddbtest
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=thymewizard
-spring.datasource.password=thymewizard
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.thymeleaf.cache=false
+# Database setup
+spring.datasource.url=jdbc:postgresql://localhost/tamingthymeleafdb
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
-logging.level.org.hibernate.SQL=DEBUG
-spring.jpa.properties.hibernate.show_sql=false
-spring.flyway.baselineOnMigrate=true
-spring.flyway.validateOnMigrate=false
